# LLM-VoiceTranslator

./: README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: features.md  installation.md  interface.md  models.md  usage.md
notebooks/: demoTraductor.ipynb
notebooks/flagged/: log.csv
src/: config.py  main.py
src/features/: __init__.py  audio_recorder.py  voice_translator.py
src/interface/: __init__.py  gradio_interface.py
src/models/: __init__.py  speech_recognizer.py  text_to_speech.py  translator.py
src/utils/: __init__.py  logger.py
