[tool.poetry]
name = "traductoraivoz"
version = "0.1.0"
description = ""
authors = ["Adrian Infantes <infantesromeroadrian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
torch = "^2.4.0"
transformers = "^4.44.0"
torchaudio = "^2.4.0"
soundfile = "^0.12.1"
numpy = "^2.0.1"
sentencepiece = "^0.2.0"
pyaudio = "^0.2.14"
sounddevice = "^0.4.7"
scipy = "^1.14.0"
colorama = "^0.4.6"
simpleaudio = "^1.0.4"
gradio = "^4.41.0"
sphinx = "^8.0.2"
flake8 = "^7.1.1"
black = "^24.8.0"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
